# sticker2-python

./: .gitignore  Cargo.toml  default.nix  shell.nix  tests.nix
.github/workflows/: rust.yml  test.yml
nix/: sources.json
src/: annotator.rs  config.rs  io.rs  lib.rs  sentence.rs  util.rs
