[package]
name = "sticker2-python"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "sticker2 Python module"
license = "BlueOak-1.0.0"

[lib]
name = "sticker2"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
conllu = "0.5"
serde_yaml = "0.8"
sticker2 = { version = "0.3", default-features = false }
tch = "= 0.1.7"

[dependencies.pyo3]
version = "0.9"
features = ["extension-module"]
